--- a/contribute.html
+++ b/contribute.html
@@ -167,6 +167,7 @@
               <li><a href="/#pzzlr-062" id="pzzlr-062">Identity Crisis</a></li>
               <li><a href="/#pzzlr-063" id="pzzlr-063">(Ex)Stream Surprise</a></li>
               <li><a href="/#pzzlr-064" id="pzzlr-064">Traversing Travesty</a></li>
+              <li><a href="/#pzzlr-065" id="pzzlr-065">A Matter of Context</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
