Adding puzzler 67: 'Inconstant Constants'

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
             <li><a href="#" id="pzzlr-064">Traversing Travesty</a></li>
             <li><a href="#" id="pzzlr-065">A Matter of Context</a></li>
             <li><a href="#" id="pzzlr-066">Inference Hindrance</a></li>
+            <li><a href="#" id="pzzlr-067">Inconstant Constants</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
