--- a/contribute.html
+++ b/contribute.html
@@ -169,6 +169,7 @@
               <li><a href="/#pzzlr-064" id="pzzlr-064">Traversing Travesty</a></li>
               <li><a href="/#pzzlr-065" id="pzzlr-065">A Matter of Context</a></li>
               <li><a href="/#pzzlr-066" id="pzzlr-066">Inference Hindrance</a></li>
+              <li><a href="/#pzzlr-067" id="pzzlr-067">Inconstant Constants</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
