--- a/puzzlers/pzzlr-string-context.html
+++ b/puzzlers/pzzlr-string-context.html
@@ -64,27 +64,25 @@ and the second throws a runtime exception
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
-    When using the string context <tt>s</tt>, or any other string context, the
-    treatment of escape sequences is not actually determined by the
-    &quot;string-like expression&quot; immediately following the string
-    context.
+    When using the string interpolator <tt>s</tt>, or any other
+    interpolation method, the treatment of escape sequences is not actually
+    determined by the &quot;string-like expression&quot; immediately
+    following the identifier.
   </p>
   <p>
-    Instead, as described in <a href="" target="_blank">SIP-</a>, the
-    string-like expression following the context is <em>always</em> treated as
-    an &quot;unescaped&quot; string, i.e. as if it were enclosed in
-    triple-quotes. From the perspective of the treatment of escape
-    characters, the expressions
+    Instead, as described in <a href="http://docs.scala-lang.org/overviews/core/string-interpolation.html" target="_blank">
+    the documentation</a>, the string-like expression following the identifier
+    is <em>always</em> treated as a multi-line string literal, i.e. as if it
+    were enclosed in triple-quotes. The expressions
     <tt>s"""\\builder\tmp-${uniqueSuffix}"""</tt> and
-    <tt>s"\\builder\tmp-${uniqueSuffix}"</tt> are, therefore, equivalent.
-    They are both rewritten to:
+    <tt>s"\\builder\tmp-${uniqueSuffix}"</tt> are both rewritten to:
 <pre class="prettyprint lang-scala">
-    new StringContext("""\\builder\tmp-${uniqueSuffix}""").eval()
+    StringContext("""\\builder\tmp-""").s(uniqueSuffix)
 </pre>
   </p>
   <p>
     How escape sequences are interpreted depends on the implementation of the
-    <tt>eval</tt> method. In the case of the string context <tt>s</tt>, these
+    interpolator. In the case of the interpolation method <tt>s</tt>, escape
     sequences are interpreted as they would be in a single-quoted string, so
     both the second and third <tt>println</tt> statements print
     <tt>\builder&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;mp-42</tt>.
