Big formatting alignment/cleanup

--- a/puzzlers/pzzlr-010.html
+++ b/puzzlers/pzzlr-010.html
@@ -31,39 +31,28 @@ object XY {
 
 println(if (math.random > 0.5) XY.X.value else XY.Y.value)
 </pre>
-
-<ol>
-<li>
-Prints:
+  <ol>
+    <li>Prints:
 <pre class="prettyprint lang-scala">
 1
 </pre>
-</li>
-
-<li id="correct-answer">
-Prints:
+    </li>
+    <li id="correct-answer">Prints:
 <pre class="prettyprint lang-scala">
 2
 </pre>
-</li>
-
-<li>
-Prints either:
+    </li>
+    <li>Prints either:
 <pre class="prettyprint lang-scala">
 1
 </pre>
-or:
+    or:
 <pre class="prettyprint lang-scala">
 2
 </pre>
-</li>
-
-<li>
-Throws a runtime exception
-</li>
-
-</ol>
-
+    </li>
+    <li>Throws a runtime exception</li>
+  </ol>
 </div>
 <button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
 <div id="explanation" class="explanation" style="display:none">
