--- a/puzzlers/pzzlr-036.html
+++ b/puzzlers/pzzlr-036.html
@@ -72,8 +72,8 @@ Puzzled yet?
   </p>
   <p>
     Adapting an argument list so that it is taken as a single <tt>Tuple</tt> argument is usually helpful.
-    In this case, under <tt>-Ywarn-adapted-args</tt>, the compiler will warn: "this is unlikely
-    to be what you want." The feature can be disabled with <tt>-Yno-adapted-args</tt>.
+    In this case, under <tt>-Ywarn-adapted-args</tt>, the compiler will warn: &quot;this is unlikely
+    to be what you want.&quot; The feature can be disabled with <tt>-Yno-adapted-args</tt>.
   </p>
   <p>
     The desired behavior was, presumably, for the prompt to be evaluated only when the <tt>prompted</tt>
