--- a/puzzlers/pzzlr-029.html
+++ b/puzzlers/pzzlr-029.html
@@ -30,7 +30,8 @@ println(b.x)
 val bX = b.x
 println(bX)
 </pre>
-  <ol><li>The first throws a <tt>NullPointerException</tt> at runtime, the second prints:
+  <ol>
+    <li>The first throws a <tt>NullPointerException</tt> at runtime, the second prints:
 <pre class="prettyprint lang-scala">
 0
 </pre>
@@ -52,7 +53,7 @@ null
 null
 0
 </pre>
-  </li>
+    </li>
   </ol>
 </div>
 <button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
