--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
             <li><a href="#" id="pzzlr-068">For Each Step...</a></li>
             <li><a href="#" id="pzzlr-069">Beep Beep...Reversing</a></li>
             <li><a href="#" id="pzzlr-070">Reductio Ad Absurdum</a></li>
+            <li><a href="#" id="pzzlr-071">Repeat After Me</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
