--- a/contribute.html
+++ b/contribute.html
@@ -173,6 +173,7 @@
               <li><a href="/#pzzlr-068" id="pzzlr-068">For Each Step...</a></li>
               <li><a href="/#pzzlr-069" id="pzzlr-069">Beep Beep...Reversing</a></li>
               <li><a href="/#pzzlr-070" id="pzzlr-070">Reductio Ad Absurdum</a></li>
+              <li><a href="/#pzzlr-071" id="pzzlr-071">Repeat After Me</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
