--- a/puzzlers/pzzlr-varargs-eta.html
+++ b/puzzlers/pzzlr-varargs-eta.html
@@ -95,6 +95,9 @@ I like your dots!
     values to be passed.
   </p>
   <p>
-    While the &quot;passing through&quot; of a repeated parameter during eta expansion is in line with most users' expectation, it is unclear whether this agrees with the specification of eta expansion in SLS &sect;6.26.5.
+    While the &quot;passing through&quot; of a repeated parameter
+    during eta expansion is in line with most users' expectation, it is
+    unclear whether this agrees with the specification of eta expansion
+    in SLS &sect;6.26.5.
   </p>
 </div>
